added works|polished components

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,6 @@
 import SEO from 'components/common/SEO'
 import Intro from 'components/landing/Intro'
+import Works from 'components/landing/Works'
 import Projects from 'components/landing/Projects'
 import Skills from 'components/landing/Skills'
 import About from 'components/landing/About'
@@ -8,6 +9,7 @@ import Footer from 'components/theme/Footer'
 
 <SEO />
 <Intro />
+<Works />
 <Projects />
 <Skills />
 <About />
